--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                                     <li>git pull</li>
                                 </ul>
                                 <p>To customize elements, use the style.css file located in assets/css.</p>
+                                <p>To customize elements, use the style.css file located in assets/css.</p>
                     </div>
                 </div>
             </div>
